[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pymodoro"
version = "0.1"
dependencies = [
  "tqdm",
  "colorama"
]
requires-python = ">=3.8"
authors = [
  {name = "Gorlevich Daniil", email = "gorlevichd@gmail.com"}
]
description = "Simple CLI pomodoro with Python backend"
readme = "README.md"
license = {text = "MIT License"}

classifiers = [
  "Development Status :: 2 - Pre-Alpha",
  
  "Environment :: Console",

  "License :: OSI Approved :: MIT License",

  "Topic :: Office/Business :: Scheduling"
]
